<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name"><b><t>Software and Research</t></b></string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="text_value1">How can we help ?</string>
    <string name="text_value2">The Software Sustainability Institute cultivates world-class </string>
    <string name="text_value3">research with software</string>
    <string name="text_value4" />
    <string name="blog"><b>Blog</b></string>
    <string name="Events"><b>Events</b></string>
    <string name="eval">Online Software Evaluation</string>
    <string name="desc">Description goes here!</string>
    <string name="TestButton">Pull To Refresh</string>
    <string name="text_value5"/>
    
    <string name="pull_to_refresh_pull_label">Pull to refresh...</string>
    <string name="pull_to_refresh_release_label">Release to refresh...</string>
    <string name="pull_to_refresh_refreshing_label">Loading...</string>
    <string name="pull_to_refresh_tap_label">Tap to refresh...</string>

    <string name="title_activity_display_events_list"><b>Events</b></string>
    <string name="heading1">Upcoming events</string>
    <string name="event1">December 3-4, 2013:  Software Carpentry boot camp at EPCC, The University of Edinburgh </string>
    <string name="heading2">Past events</string>
    <string name="event2">September 9-11, 2013:  Digital Research 2013 at Oxford</string>
    <string name="event3">August 14, 2013: Workshop for e-infrastruture trainers at Hartree Centre, Daresbury</string>
    <string name="event4">September 17, 2013: Software and Polar Research Workshop at Cambridge</string>
    <string name="event5">August 28-30, 2013: SelUCCR Summer School 2013 at Daresbury</string>
    <string name="title_activity_display_blogs_list"><b>Software and research</b></string>
    <string name="title">null</string>
    <string name="date">date</string>
    <string name="loading">Loading please wait ...</string>
    <string name="title_activity_list"><b>Software Sustainability Institute</b></string>

</resources>
