<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".DisplayEventsList" >
     
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/heading1" 
      android:layout_gravity="left"
      android:textStyle="bold" 
      android:fontFamily="Lucida Sans"/>
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_value4" /> 
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/event1" 
      android:layout_gravity="left"
      android:fontFamily="Helvetica" />
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_value4" /> 
      
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/heading2" 
      android:layout_gravity="left"
      android:textStyle="bold" 
      android:fontFamily="Lucida Sans" />
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_value4" /> 
     
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/event4" 
      android:layout_gravity="left"
      android:fontFamily="Helvetica" />
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_value4" /> 
     
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/event2" 
      android:layout_gravity="left"
      android:fontFamily="Helvetica" />
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_value4" /> 
      
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/event5" 
      android:layout_gravity="left"
      android:fontFamily="Helvetica" />
    
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/text_value4" /> 
     
    <TextView
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:text="@string/event3"
      android:layout_gravity="left"
      android:fontFamily="Helvetica" />
   
</LinearLayout>
